# waylog-cli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  README_zh.md  build.rs
.github/workflows/: ci.yml  release.yml
demo/: pull.tape  run.tape
scripts/: install.sh  test-ci-integration.sh  test-local-integration.sh
src/: cli.rs  config.rs  error.rs  init.rs  logging.rs  main.rs  output.rs
src/commands/: mod.rs  pull.rs  run.rs
src/commands/run/: cleanup.rs  mod.rs  process.rs
src/exporter/: frontmatter.rs  markdown.rs
src/exporter/markdown/: formatter.rs  mod.rs
src/output/: init.rs  mod.rs  pull.rs  run.rs
src/providers/: claude.rs  mod.rs
src/session/: tracker.rs
src/session/tracker/: mod.rs  restore.rs
src/utils/: path.rs
test_env/clean_dir/.specstory/: .project.json
