[package]
name = "waylog-cli"
version = "0.1.0"
edition = "2021"
authors = ["WayLog Contributors"]
description = "A CLI tool to automatically sync AI chat history from various tools"
license = "Apache-2.0"

[[bin]]
name = "waylog"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# JSON/JSONL parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Path and file utilities
home = "0.5"
walkdir = "2.4"

# Hashing (for Gemini path encoding)
sha2 = "0.10"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Cross-platform process management
which = "6.0"

# Async trait support
async-trait = "0.1"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"
